--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -1,7 +1,7 @@
 version: 1.0
 
 logging:
-  level: "info"
+  level: "error"
   console: true # printing log to console is only supported in development mode
 
 # for testing
