--- a/.github/workflows/CICD_Hetz_test.yml
+++ b/.github/workflows/CICD_Hetz_test.yml
@@ -12,8 +12,8 @@ on:
         required: true
         
 env:
-  KUBE_NAMESPACE: ${{ github.event.inputs.kubedns }}
-  KUBE_CONFIGS: ${{ secrets[github.event.inputs.kubedns] }}
+  KUBE_NAMESPACE: ${{ github.event.inputs.kube_ns }}
+  KUBE_CONFIGS: KUBE_CONFIG_DATA_$KUBE_NAMESPACE
 
 jobs:
   dockerize_blobber:
@@ -28,11 +28,11 @@ jobs:
         SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
         echo ::set-output name=BRANCH::${BRANCH}
         echo ::set-output name=VERSION::${BRANCH}-${SHORT_SHA} 
-
+        
     - name: Update Blobber Image to Kubernetes Cluster
       uses: actions-hub/kubectl@master
       with:
         args: get pods -A
       env:
         TAG: ${{ steps.get_version.outputs.VERSION }}
-        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG_DATA_ }}
+        KUBE_CONFIG: ${{ secrets[KUBE_CONFIGS] }}
