--- a/.github/workflows/CICD_Hetz_test.yml
+++ b/.github/workflows/CICD_Hetz_test.yml
@@ -35,4 +35,4 @@ jobs:
         args: get pods -A
       env:
         TAG: ${{ steps.get_version.outputs.VERSION }}
-        KUBE_CONFIG: ${{ secrets[KUBE_CONFIGS] }}
+        KUBE_CONFIG: ${{ secrets[env.KUBE_CONFIGS] }}
