--- a/.github/workflows/CICD_Hetz_test.yml
+++ b/.github/workflows/CICD_Hetz_test.yml
@@ -31,11 +31,11 @@ jobs:
     - name: Get Kube Config File
       id: get_kube_config
       run: |
-        echo ::set-output name=KUBE_CONFIGS::KUBE_CONFIG_DATA_
-        echo ::set-output name=KUBE_CONFIG::${KUBE_CONFIGS}-${KUBE_NAMESPACE} 
+        echo ::set-output name=KUBE_CONFIG1::KUBE_CONFIG_DATA
+        echo ::set-output name=KUBE_CONFIG2::${KUBE_CONFIG1}_${KUBE_NAMESPACE} 
         echo $KUBE_NAMESPACE
-        echo $KUBE_CONFIGS
-        echo $KUBE_CONFIG
+        echo ${{ steps.get.get_kube_config.outputs.KUBE_CONFIG1 }}
+        echo ${{ steps.get.get_kube_config.outputs.KUBE_CONFIG2 }}
 
     - name: Update Blobber Image to Kubernetes Cluster
       uses: actions-hub/kubectl@master
@@ -43,3 +43,4 @@ jobs:
         args: get pods -A
       env:
         TAG: ${{ steps.get_version.outputs.VERSION }}
+        KUBE_CONFIG: ${{ steps.get.get_kube_config.outputs.KUBE_CONFIG2 }}
