--- a/.github/workflows/CICD_Hetz_test.yml
+++ b/.github/workflows/CICD_Hetz_test.yml
@@ -31,9 +31,11 @@ jobs:
     - name: Get Kube Config File
       id: get_kube_config
       run: |
-        echo ::set-output name=KUBE_CONFIG1::KUBE_CONFIG_DATA
+        KUBE_CONFIG1=$(echo KUBE_CONFIG_DATA)
         echo ::set-output name=KUBE_CONFIG2::${KUBE_CONFIG1}_${KUBE_NAMESPACE} 
         echo $KUBE_NAMESPACE
+
+
         echo ${{ steps.get_kube_config.outputs.KUBE_CONFIG1 }}
         echo ${{ steps.get_kube_config.outputs.KUBE_CONFIG2 }}
 
