--- a/.github/workflows/CICD_Hetz_test.yml
+++ b/.github/workflows/CICD_Hetz_test.yml
@@ -33,9 +33,9 @@ jobs:
       run: |
         KUBE_CONFIG1=$(echo KUBE_CONFIG_DATA)
         echo ::set-output name=KUBE_CONFIG2::${KUBE_CONFIG1}_${KUBE_NAMESPACE} 
+
+    - name: Check File Name
         echo $KUBE_NAMESPACE
-
-
         echo ${{ steps.get_kube_config.outputs.KUBE_CONFIG1 }}
         echo ${{ steps.get_kube_config.outputs.KUBE_CONFIG2 }}
 
