--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Clone gosdk
         run: |
-          git clone https://github.com/cnlangzi/gosdk.git $GOSDK
+          git clone https://github.com/0chain/gosdk.git $GOSDK
           git checkout $BRANCH
       - name: Run tests
         run: |
@@ -38,9 +38,3 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/code/go/0chain.net/
           bash <(curl -s https://codecov.io/bash)
-        # uses: codecov/codecov-action@v1
-        # with:
-        #   files: ${{ github.workspace }}/code/go/0chain.net/coverage.txt
-        #   flags: script
-        #   name: codecov-script
-   
