fix(devops):0chain/gosdk#107 fixed gosdk path and disable ci jobs on dayi/* branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,15 @@ name: CI
 
 on:
   push:
+    branches-ignore:
+      - dayi/main
+      - dayi/qa
+      - dayi/dev
+
   release:
     types:
       - published
+      
 
 env:
   BLOBBER_REGISTRY: ${{ secrets.BLOBBER_REGISTRY }}
