--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,9 +30,9 @@ jobs:
         run: |
           [ -d $GOSDK ] && rm -rf $GOSDK
           git clone https://github.com/0chain/gosdk.git $GOSDK
+          cd $GOSDK
           git checkout $BRANCH
-          tree -a  $GOSDK/core/util
-          cat $GOSDK/core/util/stream_merkle_hasher.go
+  
       - name: Run tests
         run: |
           cd $GITHUB_WORKSPACE/code/go/0chain.net/ 
