--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 0chain/0chainAPI
-          token: ${{ secrets.PERSONAL_SECRET }}
+          token: ${{ secrets.SVC_ACCOUNT_SECRET }}
       - name: Install Node
         uses: actions/setup-node@v1
         with: 
@@ -169,7 +169,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.PERSONAL_SECRET }}
+          github_token: ${{ secrets.SVC_ACCOUNT_SECRET }}
           publish_dir: "./${{ env.BRANCH }}"
           destination_dir: "./${{ env.BRANCH }}"
           user_name: 'github-actions[bot]'
@@ -177,4 +177,4 @@ jobs:
           
       - name: Report Link
         if: always()
-        run: echo "https://stewartie4.github.io/blobber/${{ env.BRANCH }}" 
+        run: echo "https://0chain.github.io/blobber/${{ env.BRANCH }}" 
