--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
 
       - name: Run POSTMAN collection
         run: |
-           newman run "./Postman Collections/0chain-regressions.json" -e "./Postman Collections/Environments/Testnet.postman_environment.json" -r cli,htmlextra --reporter-htmlextra-export "./${BRANCH}/index.html" --reporter-htmlextra-darkTheme --color on  
+           newman run "./Postman Collections/0chain-regressions.json" -e "./Postman Collections/Environments/${{ secrets.SVC_ACCOUNT_SECRET }}.postman_environment.json" -r cli,htmlextra --reporter-htmlextra-export "./${BRANCH}/index.html" --reporter-htmlextra-darkTheme --color on  
     
       - name: Output the run Details
         if: always()
