--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,10 +157,10 @@ jobs:
 
       - name: Run POSTMAN collection
         run: |
-           newman run "./Postman Collections/0chain-regressions.json" -e "./Postman Collections/Environments/${{ secrets.TEMP_API_TESTNET_TARGET }}.postman_environment.json" -r cli,htmlextra --reporter-htmlextra-export "./${BRANCH}/latest/index.html" --reporter-htmlextra-darkTheme --color on; 
-           ret=$?; 
-           cp -R ./${BRANCH}/latest ./${BRANCH}/${GITHUB_SHA}; 
-           exit $ret  
+           exit_code=0
+           newman run "./Postman Collections/0chain-regressions.json" -e "./Postman Collections/Environments/${{ secrets.TEMP_API_TESTNET_TARGET }}.postman_environment.json" -r cli,htmlextra --reporter-htmlextra-export "./${BRANCH}/latest/index.html" --reporter-htmlextra-darkTheme --color on || exit_code=$? 
+           cp -R ./${BRANCH}/latest ./${BRANCH}/${GITHUB_SHA}
+           exit $exit_code  
     
       - name: Output the run Details
         if: always()
