--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
+          keep_files: true
           github_token: ${{ secrets.SVC_ACCOUNT_SECRET }}
           publish_dir: "./${{ env.BRANCH }}"
           destination_dir: "./${{ env.BRANCH }}"
