--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,103 +5,98 @@ on:
     branches:
       - gitactionsfix
 
-# on:
-#   workflow_dispatch:
-#     inputs:
-#       minerImage:
-#         description: 'miner image tag'
-#         required: true
-#         default: latest
-#       sharderImage:
-#         description: 'sharder image tag'
-#         required: true
-#         default: latest
-#       blobberImage:
-#         description: 'blobber image tag'
-#         required: true
-#         default: latest
-#       validatorImage:
-#         description: 'validator image tag'
-#         required: true
-#         default: latest
-
 jobs:
-  network-setup:
+  build-push-image:
     runs-on: ubuntu-20.04
-    env:
-      HOST: testnet.load.testnet-0chain.net
-    steps:
+    steps: 
       - uses: actions/checkout@v2
-
-      # - name: Triggering build.yml for creating & pushing docker images.
-      #   uses: convictional/trigger-workflow-and-wait@v1.3.0
-      #   with:
-      #     owner: 0chain
-      #     repo: 0proxy
-      #     github_token: ${{ secrets.GOSDK }}
-      #     workflow_file_name: build.yml
-      #     ref: master
-      #     propagate_failure: true
-      #     trigger_workflow: true
-      #     wait_workflow: true
-      - uses: azure/setup-helm@v1
+      - name: Get Branch
+        id: get_branch
+        run: |
+          BRANCH=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')
+          echo ::set-output name=BRANCH::${BRANCH}
+      - name: Triggering build.yml for creating & pushing docker images.
+        uses: convictional/trigger-workflow-and-wait@v1.3.0
         with:
-          version: 'v3.2.2'
-      - name: Setup helm repo
-        run: |
-          helm repo add 0chain http://0chain-helm-chart.s3-website.us-east-2.amazonaws.com/
-      - name: Setup kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG64TEST }}" | base64 -d > ~/.kube/config
-      - name: Uninstall old release
-        run: |
-          helm uninstall zerochain -n zerochain || true
-      - name: Setup chain
-        run: |
-          helm install zerochain -n zerochain \
-          --set ingress.host=${HOST} \
-          --set sharder.image.tag=latest \
-          --set miner.image.tag=latest \
-          --set blobber.image.tag=latest \
-          --set validator.image.tag=latest \
-          0chain/0chain
-      - name: Check if services are up
-        run: |
-          printf 'Waiting for 0dns'
-          until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/dns/) =~ 2[0-9][0-9] ]] ;do
-            printf '.'
-            sleep 2
-          done
-          printf 'Waiting for 1st sharder'
-          until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/sharder0/) =~ 2[0-9][0-9] ]] ;do
-            printf '.'
-            sleep 2
-          done
-          printf 'Waiting for 1st miner'
-          until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/miner0/) =~ 2[0-9][0-9] ]] ;do
-            printf '.'
-            sleep 2
-          done
+          owner: 0chain
+          repo: blobber
+          github_token: ${{ secrets.CICD }}
+          workflow_file_name: build.yml
+          ref: ${{ steps.get_branch.outputs.Branch }}
+          inputs: '{"DOCKERHUB_REPO":"TEST"}'
+          propagate_failure: true
+          trigger_workflow: true
+          wait_workflow: true
 
-      # - name: Triggering ci.yml to run Postman API tests
-      #   uses: convictional/trigger-workflow-and-wait@v1.3.0
-      #   with:
-      #     owner: 0chain
-      #     repo: 0proxy
-      #     github_token: ${{ secrets.GOSDK }}
-      #     workflow_file_name: build.yml
-      #     ref: master
-      #     propagate_failure: true
-      #     trigger_workflow: true
-      #     wait_workflow: true
+  # network-setup:
+  #   runs-on: ubuntu-20.04
+  #   env:
+  #     HOST: testnet.load.testnet-0chain.net
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      # - name: Build
-      #   run: make build
-      # - name: Running Load Tests
-      #   run: |
-      #     make run config=loadTest-load-testnet.yaml
+  #     - uses: azure/setup-helm@v1
+  #       with:
+  #         version: 'v3.2.2'
+  #     - name: Setup helm repo
+  #       run: |
+  #         helm repo add 0chain http://0chain-helm-chart.s3-website.us-east-2.amazonaws.com/
+  #     - name: Setup kubeconfig
+  #       run: |
+  #         mkdir -p ~/.kube
+  #         echo "${{ secrets.KUBECONFIG64TEST }}" | base64 -d > ~/.kube/config
+  #     - name: Uninstall old release
+  #       run: |
+  #         helm uninstall zerochain -n zerochain || true
+  #     - name: Setup chain
+  #       run: |
+  #         helm install zerochain -n zerochain \
+  #         --set ingress.host=${HOST} \
+  #         --set sharder.image.tag=latest \
+  #         --set miner.image.tag=latest \
+  #         --set blobber.image.tag=latest \
+  #         --set validator.image.tag=latest \
+  #         0chain/0chain
+  #     - name: Check if services are up
+  #       run: |
+  #         printf 'Waiting for 0dns'
+  #         until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/dns/) =~ 2[0-9][0-9] ]] ;do
+  #           printf '.'
+  #           sleep 2
+  #         done
+  #         printf 'Waiting for 1st sharder'
+  #         until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/sharder0/) =~ 2[0-9][0-9] ]] ;do
+  #           printf '.'
+  #           sleep 2
+  #         done
+  #         printf 'Waiting for 1st miner'
+  #         until [[ $(curl -I --silent -o /dev/null -w %{http_code} http://${HOST}/miner0/) =~ 2[0-9][0-9] ]] ;do
+  #           printf '.'
+  #           sleep 2
+  #         done
 
-      # - name: Uninstall the release
-      #   if: ${{ always() }}
-      #   run: helm uninstall zerochain -n zerochain
+  #     # - name: Triggering ci.yml to run Postman API tests
+  #     #   uses: convictional/trigger-workflow-and-wait@v1.3.0
+  #     #   with:
+  #     #     owner: 0chain
+  #     #     repo: 0proxy
+  #     #     github_token: ${{ secrets.GOSDK }}
+  #     #     workflow_file_name: build.yml
+  #     #     ref: master
+  #     #     propagate_failure: true
+  #     #     trigger_workflow: true
+  #     #     wait_workflow: true
+
+  #     # - name: Build
+  #     #   run: make build
+  #     # - name: Running Load Tests
+  #     #   run: |
+  #     #     make run config=loadTest-load-testnet.yaml
+
+  #     - name: Uninstall the release
+  #       if: ${{ always() }}
+  #       run: helm uninstall zerochain -n zerochain
+
+  #     - name: Deleting kubeconfig
+  #       run: |
+  #         rm -rf ~/.kube
