--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,8 +26,8 @@ jobs:
           owner: 0chain
           repo: blobber
           github_token: $GITHUB_TOKEN
-          workflow_file_name: build.yml
-          ref: master
+          workflow_file_name: test.yml
+          ref: ${{ steps.get_branch.outputs.BRANCH }}
           inputs: '{"DOCKERHUB_REPO":"TEST"}'
           propagate_failure: true
           trigger_workflow: true
