--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
       - gitactionsfix
 
 env:
-  GITHUB_TOKEN: ${{ secrets.GOSDK }}
+  GITHUB_TOKEN: ${{ secrets.CICD }}
 
 jobs:
   build-push-image:
@@ -25,7 +25,7 @@ jobs:
         with:
           owner: 0chain
           repo: blobber
-          github_token: ${{ secrets.GOSDK }}
+          github_token: ${{ secrets.CICD }}
           workflow_file_name: test.yml
           ref: ${{ steps.get_branch.outputs.BRANCH }}
           inputs: '{"DOCKERHUB_REPO":"TEST"}'
