--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,9 +26,9 @@ jobs:
           owner: 0chain
           repo: blobber
           github_token: ${{ secrets.CICD }}
-          workflow_file_name: build.yml
-          ref: master
-          inputs: '{"DOCKERHUB_REPO":"TEST"}'
+          workflow_file_name: test.yml
+          ref: ${{ steps.get_branch.outputs.BRANCH }}
+          # inputs: '{"DOCKERHUB_REPO":"TEST"}'
           propagate_failure: true
           trigger_workflow: true
           wait_workflow: true
