--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
         required: true
 
 env:
+  ZCHAIN_BUILDBASE: zchain_build_base
+  ZCHAIN_BUILDRUN: zchain_run_base
   BLOBBER_REGISTRY: ${{ secrets.BLOBBER_REGISTRY }}
   VALIDATOR_REGISTRY: ${{ secrets.VALIDATOR_REGISTRY }}
 
@@ -25,62 +27,60 @@ jobs:
         SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
         echo ::set-output name=BRANCH::${BRANCH}
         echo ::set-output name=VERSION::${BRANCH}-${SHORT_SHA} 
-
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # - name: Build blobber
-    #   run: |
-    #     docker build -t $BLOBBER_REGISTRY:$TAG -f "$DOCKERFILE_BLOB" .
-    #     docker tag $BLOBBER_REGISTRY:$TAG $BLOBBER_REGISTRY:latest
-    #     docker push $BLOBBER_REGISTRY:$TAG
-    #   env:
-    #     TAG: ${{ steps.get_version.outputs.VERSION }}
-    #     DOCKERFILE_BLOB: "docker.local/Dockerfile"
+    - name: Build blobber
+      run: |
+        docker build -t $BLOBBER_REGISTRY:$TAG -f "$DOCKERFILE_BLOB" .
+        docker tag $BLOBBER_REGISTRY:$TAG $BLOBBER_REGISTRY:latest
+        docker push $BLOBBER_REGISTRY:$TAG
+      env:
+        TAG: ${{ steps.get_version.outputs.VERSION }}
+        DOCKERFILE_BLOB: "docker.local/Dockerfile"
 
-  #   - name: Push blobber
-  #     run: |
-  #       if [[ "$PUSH_LATEST" == "yes" ]]; then
-  #         docker push $BLOBBER_REGISTRY:latest
-  #       fi
-  #     env:
-  #       PUSH_LATEST: ${{ github.event.inputs.latest_tag }}
+    - name: Push blobber
+      run: |
+        if [[ "$PUSH_LATEST" == "yes" ]]; then
+          docker push $BLOBBER_REGISTRY:latest
+        fi
+      env:
+        PUSH_LATEST: ${{ github.event.inputs.latest_tag }}
 
-  # dockerize_validator:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #   - uses: actions/checkout@v1
+  dockerize_validator:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v1
 
-  #   - name: Get the version
-  #     id: get_version
-  #     run: |
-  #       BRANCH=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')
-  #       SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
-  #       echo ::set-output name=BRANCH::${BRANCH}
-  #       echo ::set-output name=VERSION::${BRANCH}-${SHORT_SHA}    
+    - name: Get the version
+      id: get_version
+      run: |
+        BRANCH=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')
+        SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
+        echo ::set-output name=BRANCH::${BRANCH}
+        echo ::set-output name=VERSION::${BRANCH}-${SHORT_SHA}    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-  #   - name: Login to Docker Hub
-  #     uses: docker/login-action@v1
-  #     with:
-  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #       password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-  #   - name: Build validator
-  #     run: |
-  #       docker build -t $VALIDATOR_REGISTRY:$TAG -f "$DOCKERFILE_PROXY" .
-  #       docker tag $VALIDATOR_REGISTRY:$TAG $VALIDATOR_REGISTRY:latest
-  #       docker push $VALIDATOR_REGISTRY:$TAG
-  #     env:
-  #       TAG: ${{ steps.get_version.outputs.VERSION }}
-  #       DOCKERFILE_PROXY: "docker.local/ValidatorDockerfile"
+    - name: Build validator
+      run: |
+        docker build -t $VALIDATOR_REGISTRY:$TAG -f "$DOCKERFILE_PROXY" .
+        docker tag $VALIDATOR_REGISTRY:$TAG $VALIDATOR_REGISTRY:latest
+        docker push $VALIDATOR_REGISTRY:$TAG
+      env:
+        TAG: ${{ steps.get_version.outputs.VERSION }}
+        DOCKERFILE_PROXY: "docker.local/ValidatorDockerfile"
     
-  #   - name: Push validator
-  #     run: |
-  #       if [[ "$PUSH_LATEST" == "yes" ]]; then
-  #         docker push $VALIDATOR_REGISTRY:latest
-  #       fi
-  #     env:
-  #       PUSH_LATEST: ${{ github.event.inputs.latest_tag }}
+    - name: Push validator
+      run: |
+        if [[ "$PUSH_LATEST" == "yes" ]]; then
+          docker push $VALIDATOR_REGISTRY:latest
+        fi
+      env:
+        PUSH_LATEST: ${{ github.event.inputs.latest_tag }}
