--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,45 +37,39 @@ jobs:
           ../bin/blobber.start_bls.sh </dev/null &>/dev/null &
           cd ../..
           make integration-tests
-  lint:
-    runs-on: ubuntu-20.04
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
     steps:
-      - name: Install Go
+      - uses: actions/checkout@v2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
+
+
+  buf-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        if: success()
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: checkout-master
+        if: success()
+        run: git checkout master
+      - name: checkout
+        if: success()
+        uses: actions/checkout@v2
+      - name: setup
+        if: success()
         uses: actions/setup-go@v2
         with:
           go-version: 1.14.x
-      - uses: actions/checkout@v2
-      - name: Install golangci-lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.38.0
-          golangci-lint --version
-      - name: Lint
-        run: make lint
-
-
-  generated-files-integrity:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.14.x
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: |
-          cd code/go/0chain.net/blobbercore
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
-          go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
-          github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
-          google.golang.org/protobuf/cmd/protoc-gen-go \
-          google.golang.org/grpc/cmd/protoc-gen-go-grpc
-          git reset --hard
-      - name: Generate Files
-        run: |
-          ./scripts/generate-grpc.sh
-      - name: Fail if any file has changed
-        run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; git diff; exit 1; fi;
+      - name: make local
+        if: success()
+        run: make local
 
   dockerize_blobber:
     runs-on: ubuntu-20.04
