--- a/buf.yaml
+++ b/buf.yaml
@@ -13,6 +13,8 @@ lint:
   rpc_allow_google_protobuf_empty_requests: false
   rpc_allow_google_protobuf_empty_responses: false
   service_suffix: Service
+  ignore:
+    - google/api
 breaking:
   use:
     - FILE
