fix: expose port in ci
Signed-off-by: kushthedude <kushthedude@gmail.com>

--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
-    ports:
+#expose_ci_port
       # - "5432:5432"
     volumes:
       - ./blobber${BLOBBER}/data/postgresql:/var/lib/postgresql/data
