increase timeout config
Signed-off-by: kushthedude <kushthedude@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: latest
+          args: --timeout=2m0s
 
   buf-build:
     runs-on: ubuntu-latest
