--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -51,6 +51,10 @@ max_stake: 100.0
 num_delegates: 50
 # service charge of the blobber
 service_charge: 0.30
+# min submit from miners
+min_submit: 50
+# min confirmation from sharder
+min_confirmation: 50
 
 block_worker: http://198.18.0.98:9091
 
