--- a/buf.yaml
+++ b/buf.yaml
@@ -5,6 +5,8 @@ deps:
 build:
   roots:
     - code/go/0chain.net/blobbercore/blobbergrpc/proto
+  excludes:
+    - code/go/0chain.net/blobbercore/blobbergrpc/proto/google
 lint:
   use:
     - DEFAULT
@@ -13,8 +15,6 @@ lint:
   rpc_allow_google_protobuf_empty_requests: false
   rpc_allow_google_protobuf_empty_responses: false
   service_suffix: Service
-  ignore:
-    - google/api
   except:
     - PACKAGE_AFFINITY
     - FILE_LAYOUT
