--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,9 +2,9 @@ name: Benchmark tests
 
 on:
   push:
-    # branches: [ master ]
+    branches: [ master, staging, stream ]
   pull_request:
-    # branches: [ master ]
+    branches: [ master, staging, stream ]
 
 jobs:
   benchmark:
