--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -3,11 +3,10 @@ name: Dockerize
 on:
  push: 
   branches:
+    - staging
     - stream
-  pull_request:
-    - stream
-  # tags: 
-  #   - '*'
+  tags: 
+    - '*'
 
 
 env:
